--- a/bankapp/src/main/resources/application-dev.properties
+++ b/bankapp/src/main/resources/application-dev.properties
@@ -1,3 +1,12 @@
+# Configuration for connecting to the MongoDB database
 spring.data.mongodb.host=localhost
+ # The hostname of the MongoDB server
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=bankapp
+  # The port number on which MongoDB is running
+spring.data.mongodb.database=bankapp  # The name of the MongoDB database to use
+
+# JWT (JSON Web Token) configuration
+jwt.secret=chgWXcbAwcFEWEvjZ8lrV8kzEyeY9oAJFCXbLC7whrA=
+ # Secret key used for signing JWTs
+jwt.expiration=3600000
+ # Expiration time for JWTs in milliseconds (1 hour)
