--- a/bankapp/.github/workflows/build.yml
+++ b/bankapp/.github/workflows/build.yml
@@ -18,6 +18,9 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: Make Gradle Wrapper Executable
+        run: cd bankapp && chmod +x gradlew
+
       - name: Build with Gradle
         run: cd bankapp && ./gradlew build -x test
 
