--- a/bankapp/.github/workflows/build.yml
+++ b/bankapp/.github/workflows/build.yml
@@ -24,25 +24,22 @@ jobs:
       - name: Build with Gradle
         run: cd bankapp && ./gradlew build -x test
 
-      - name: Build & Push Docker image
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          docker login -u $DOCKER_USERNAME --password-stdin $DOCKER_PASSWORD
-          docker build -t $DOCKER_USERNAME/springboot-app:latest .
-          docker push $DOCKER_USERNAME/springboot-app:latest
+      - name: Copy Spring Boot JAR to EC2
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          source: "bankapp/build/libs/*.jar"
+          target: "~/springboot-app.jar"
 
-      - name: Deploy to EC2
+
+      - name: Run Spring Boot JAR on EC2
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            docker pull ${{ secrets.DOCKER_USERNAME }}/springboot-app:latest
-            docker stop springboot-app || true
-            docker rm springboot-app || true
-            docker run -d --name springboot-app -p 8080:8080 \
-              -e MONGODB_URI="mongodb://${{ secrets.DB_USERNAME }}:${{ secrets.DB_PASSWORD }}@${{ secrets.DB_HOST }}:27017/${{ secrets.DB_NAME }}?ssl=true&retryWrites=false" \
-              ${{ secrets.DOCKER_USERNAME }}/springboot-app:latest
+            pkill -f 'java -jar' || true
+            nohup java -jar ~/springboot-app.jar > ~/springboot-app.log 2>&1 &
