--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,4 +42,4 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             pkill -f 'java -jar' || true
-            nohup java -jar ~/springboot-app.jar > ~/springboot-app.log 2>&1 &
+            nohup java -jar ~/springboot-app.jar > ~/springboot-app.log 2>&1 & exit 0
