--- a/bankapp/src/main/resources/application-dev.properties
+++ b/bankapp/src/main/resources/application-dev.properties
@@ -3,7 +3,8 @@ spring.data.mongodb.host=localhost
  # The hostname of the MongoDB server
 spring.data.mongodb.port=27017
   # The port number on which MongoDB is running
-spring.data.mongodb.database=bankapp  # The name of the MongoDB database to use
+spring.data.mongodb.database=bankapp
+  # The name of the MongoDB database to use
 
 # JWT (JSON Web Token) configuration
 jwt.secret=chgWXcbAwcFEWEvjZ8lrV8kzEyeY9oAJFCXbLC7whrA=
